fix program header on mobile

--- a/app/Resources/markup/src/styles/partials/media.scss
+++ b/app/Resources/markup/src/styles/partials/media.scss
@@ -1063,7 +1063,7 @@
     }
 
     &__items {
-      margin: 0 -16px;
+      margin: 0 -16px 16px;
     }
 
     &__hint {
